Mise à jour : remplacement des 0 par 'unknown' dans les colonnes de type texte

--- a/src/FOOT-2-Transformation-et-nettoyage-des-données/Transformation_et_Nettoyage_des_Donnees.ipynb
+++ b/src/FOOT-2-Transformation-et-nettoyage-des-données/Transformation_et_Nettoyage_des_Donnees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 422,
    "id": "96268cd3",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
        "29  3,420  38.0   0.0   0.0   0.0   0.0  0.0    0.0   3.0   0.0   0.0  "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 422,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 423,
    "id": "5716805f",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 424,
    "id": "caf0f7a5",
    "metadata": {},
    "outputs": [],
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 425,
    "id": "090b9cd8",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 426,
    "id": "45340746",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 427,
    "id": "232c1543",
    "metadata": {},
    "outputs": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 428,
    "id": "eaedc8dd",
    "metadata": {},
    "outputs": [
@@ -892,12 +892,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1004 entries, 0 to 1003\n",
+      "Index: 975 entries, 0 to 1003\n",
       "Data columns (total 19 columns):\n",
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
-      " 0   Team           1004 non-null   object \n",
-      " 1   Date           1004 non-null   object \n",
+      " 0   Team           975 non-null    object \n",
+      " 1   Date           975 non-null    object \n",
       " 2   Time           975 non-null    object \n",
       " 3   Comp           975 non-null    object \n",
       " 4   Round          975 non-null    object \n",
@@ -916,7 +916,7 @@
       " 17  Opp_Formation  975 non-null    object \n",
       " 18  Referee        970 non-null    object \n",
       "dtypes: float64(3), object(16)\n",
-      "memory usage: 149.2+ KB\n"
+      "memory usage: 152.3+ KB\n"
      ]
     }
    ],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 429,
    "id": "b5009abc",
    "metadata": {},
    "outputs": [],
@@ -949,8 +949,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 430,
    "id": "9e8b9037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 702 entries, 0 to 753\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   Team    702 non-null    object \n",
+      " 1   Player  702 non-null    object \n",
+      " 2   Nation  696 non-null    object \n",
+      " 3   Pos     702 non-null    object \n",
+      " 4   Age     697 non-null    float64\n",
+      " 5   MP      702 non-null    float64\n",
+      " 6   Starts  702 non-null    float64\n",
+      " 7   Min     574 non-null    object \n",
+      " 8   90s     574 non-null    float64\n",
+      " 9   Gls     574 non-null    float64\n",
+      " 10  Ast     574 non-null    float64\n",
+      " 11  G+A     574 non-null    float64\n",
+      " 12  G-PK    574 non-null    float64\n",
+      " 13  PK      574 non-null    float64\n",
+      " 14  PKatt   574 non-null    float64\n",
+      " 15  CrdY    574 non-null    float64\n",
+      " 16  CrdR    574 non-null    float64\n",
+      " 17  xG      574 non-null    float64\n",
+      "dtypes: float64(13), object(5)\n",
+      "memory usage: 104.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "players_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0051bc8",
+   "metadata": {},
+   "source": [
+    "### Remplacement des valeurs manquantes par zéro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 431,
+   "id": "5e18bf24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_df = players_df.fillna(0)\n",
+    "matches_df = matches_df.fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc9f5091",
+   "metadata": {},
+   "source": [
+    "### Conversion des types de données pour l'analyse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 432,
+   "id": "6ec3a087",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_df[[\"Age\",\"MP\",\"Starts\",\"Gls\",\"Ast\",\"G+A\",\"G-PK\",\"PK\",\"PKatt\",\"CrdY\",]] = players_df[[\"Age\",\"MP\",\"Starts\",\"Gls\",\"Ast\",\"G+A\",\"G-PK\",\"PK\",\"PKatt\",\"CrdY\"]].astype(int)\n",
+    "players_df[\"Min\"] = players_df[\"Min\"].astype(str).str.replace(\",\", \"\").astype(int)\n",
+    "\n",
+    "matches_df[[\"Poss\",\"GF\",\"GA\"]] = matches_df[[\"Poss\",\"GF\",\"GA\"]].astype(int)\n",
+    "matches_df[[\"xG\",\"xGA\"]] = matches_df[[\"xG\",\"xGA\"]].astype(float)\n",
+    "matches_df[\"Attendance\"] = matches_df[\"Attendance\"].astype(str).str.replace(\",\", \"\").astype(int)\n",
+    "matches_df[\"Date\"] = pd.to_datetime(matches_df[\"Date\"])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b30ad59b",
+   "metadata": {},
+   "source": [
+    "### Remplacer les valeurs 0 par 'unknown' dans les colonnes de type objet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 433,
+   "id": "61fb63c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in players_df.select_dtypes(include='object').columns:\n",
+    "    players_df[col] = players_df[col].replace(0, \"unknown\")\n",
+    "\n",
+    "for col in matches_df.select_dtypes(include='object').columns:\n",
+    "    matches_df[col] = matches_df[col].replace(0, \"unknown\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 434,
+   "id": "264aa6a5",
    "metadata": {},
    "outputs": [
     {
@@ -970,115 +1077,24 @@
       " 5   Day            975 non-null    object        \n",
       " 6   Venue          975 non-null    object        \n",
       " 7   Result         975 non-null    object        \n",
-      " 8   GF             975 non-null    object        \n",
-      " 9   GA             975 non-null    object        \n",
+      " 8   GF             975 non-null    int64         \n",
+      " 9   GA             975 non-null    int64         \n",
       " 10  Opponent       975 non-null    object        \n",
-      " 11  xG             849 non-null    float64       \n",
-      " 12  xGA            849 non-null    float64       \n",
-      " 13  Poss           953 non-null    float64       \n",
-      " 14  Attendance     969 non-null    object        \n",
+      " 11  xG             975 non-null    float64       \n",
+      " 12  xGA            975 non-null    float64       \n",
+      " 13  Poss           975 non-null    int64         \n",
+      " 14  Attendance     975 non-null    int64         \n",
       " 15  Captain        975 non-null    object        \n",
       " 16  Formation      975 non-null    object        \n",
       " 17  Opp_Formation  975 non-null    object        \n",
-      " 18  Referee        970 non-null    object        \n",
-      "dtypes: datetime64[ns](1), float64(3), object(15)\n",
+      " 18  Referee        975 non-null    object        \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(4), object(12)\n",
       "memory usage: 152.3+ KB\n"
      ]
     }
    ],
    "source": [
     "matches_df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc9f5091",
-   "metadata": {},
-   "source": [
-    "### Conversion des types de données pour l'analyse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ec3a087",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_df[\"Age\"] = players_df[\"Age\"].astype(int)\n",
-    "players_df[\"MP\"] = players_df[\"MP\"].astype(int)\n",
-    "players_df[\"Starts\"] = players_df[\"Starts\"].astype(int)\n",
-    "players_df[\"Gls\"] = players_df[\"Gls\"].astype(int)\n",
-    "players_df[\"Ast\"] = players_df[\"Ast\"].astype(int)\n",
-    "players_df[\"G+A\"] = players_df[\"G+A\"].astype(int)\n",
-    "players_df[\"G-PK\"] = players_df[\"G-PK\"].astype(int)\n",
-    "players_df[\"PK\"] = players_df[\"PK\"].astype(int)\n",
-    "players_df[\"PKatt\"] = players_df[\"PKatt\"].astype(int)\n",
-    "players_df[\"CrdY\"] = players_df[\"CrdY\"].astype(int)\n",
-    "\n",
-    "matches_df[\"Poss\"] = matches_df[\"Poss\"].astype(int)\n",
-    "matches_df[\"Date\"] = pd.to_datetime(matches_df[\"Date\"])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "id": "61fb63c1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 702 entries, 0 to 753\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Team    702 non-null    object \n",
-      " 1   Player  702 non-null    object \n",
-      " 2   Nation  702 non-null    object \n",
-      " 3   Pos     702 non-null    object \n",
-      " 4   Age     702 non-null    int64  \n",
-      " 5   MP      702 non-null    int64  \n",
-      " 6   Starts  702 non-null    int64  \n",
-      " 7   Min     702 non-null    object \n",
-      " 8   90s     702 non-null    float64\n",
-      " 9   Gls     702 non-null    int64  \n",
-      " 10  Ast     702 non-null    int64  \n",
-      " 11  G+A     702 non-null    int64  \n",
-      " 12  G-PK    702 non-null    int64  \n",
-      " 13  PK      702 non-null    int64  \n",
-      " 14  PKatt   702 non-null    int64  \n",
-      " 15  CrdY    702 non-null    int64  \n",
-      " 16  CrdR    702 non-null    float64\n",
-      " 17  xG      702 non-null    float64\n",
-      "dtypes: float64(3), int64(10), object(5)\n",
-      "memory usage: 104.2+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "players_df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a2b037b",
-   "metadata": {},
-   "source": [
-    "### Remplacement des valeurs manquantes par zéro"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2982dc1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "players_df = players_df.fillna(0)\n",
-    "matches_df = matches_df.fillna(0)"
    ]
   },
   {
@@ -1091,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 435,
    "id": "1d7a32d2",
    "metadata": {},
    "outputs": [],
@@ -1106,6 +1122,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 436,
+   "id": "ada79f24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "team_ids = {} \n",
+    "id_counter = 1\n",
+    "for team in matches_df[\"Team\"].unique():\n",
+    "    team_ids[team] = id_counter\n",
+    "    id_counter += 1\n",
+    "    \n",
+    "matches_df[\"id_equipe\"] = matches_df[\"Team\"].map(team_ids)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "50e7c6d5",
    "metadata": {},
@@ -1115,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 437,
    "id": "91345d01",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 438,
    "id": "07ea791e",
    "metadata": {},
    "outputs": [],
@@ -1157,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 439,
    "id": "fd82098d",
    "metadata": {},
    "outputs": [],
