Mise à jour de la structure des tables : création des tables Competition, Saison, Equipe, Participation, Joueur, Match, ResultatMatch et StatistiqueJoueur avec leurs relations

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Database-Creation.ipynb.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Database-Creation.ipynb.ipynb
@@ -8,27 +8,36 @@
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine, text\n",
-    "engine = create_engine(\"postgresql://postgres:123@localhost:5432/Scaping_Data\")\n",
+    "engine = create_engine(\"postgresql://postgres:123@localhost:5432/Scaping_Data2\")\n",
     "\n",
     "with engine.begin() as conn:\n",
     "    conn.execute(text(\"\"\"\n",
-    "                      CREATE TABLE IF NOT EXISTS Competition(\n",
-    "                      id_competition SERIAL PRIMARY KEY, \n",
-    "                      nomcompetition VARCHAR(30)\n",
-    "                      )\n",
-    "                      \"\"\"))\n",
+    "        CREATE TABLE IF NOT EXISTS Competition(\n",
+    "            id_competition INT PRIMARY KEY,\n",
+    "            nomcompetition VARCHAR(30)\n",
+    "        )\n",
+    "    \"\"\"))\n",
+    "\n",
     "    conn.execute(text(\"\"\"\n",
-    "                      CREATE TABLE IF NOT EXISTS Saison(\n",
-    "                      id_saison SERIAL PRIMARY KEY,\n",
-    "                      annee VARCHAR(30)\n",
-    "                      )\n",
-    "                      \"\"\"))\n",
+    "        CREATE TABLE IF NOT EXISTS Saison(\n",
+    "            id_saison SERIAL PRIMARY KEY,\n",
+    "            annee VARCHAR(30)\n",
+    "        )\n",
+    "    \"\"\"))\n",
+    "\n",
     "    conn.execute(text(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS Equipe(\n",
-    "            id_equipe int PRIMARY KEY,\n",
-    "            nomequipe VARCHAR(50),\n",
-    "            id_competition INT REFERENCES Competition(id_competition),\n",
-    "            id_saison INT REFERENCES Saison(id_saison)\n",
+    "            id_equipe INT PRIMARY KEY,\n",
+    "            nomequipe VARCHAR(50)\n",
+    "        )\n",
+    "    \"\"\"))\n",
+    "\n",
+    "    conn.execute(text(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS Participation(\n",
+    "            id_participation SERIAL PRIMARY KEY,\n",
+    "            id_equipe INT REFERENCES Equipe(id_equipe) ON DELETE CASCADE,\n",
+    "            id_competition INT REFERENCES Competition(id_competition) ON DELETE CASCADE,\n",
+    "            id_saison INT REFERENCES Saison(id_saison) ON DELETE CASCADE\n",
     "        )\n",
     "    \"\"\"))\n",
     "\n",
@@ -47,7 +56,7 @@
     "            id_match int PRIMARY KEY,\n",
     "            date_match DATE,\n",
     "            heure TIME,\n",
-    "            round VARCHAR(20),\n",
+    "            round VARCHAR(100),\n",
     "            venue VARCHAR(50),\n",
     "            id_teamhome INT REFERENCES Equipe(id_equipe),\n",
     "            id_team_away INT REFERENCES Equipe(id_equipe),\n",
@@ -57,7 +66,7 @@
     "    \"\"\"))\n",
     "\n",
     "    conn.execute(text(\"\"\"\n",
-    "        CREATE TYPE resultat_enum AS ENUM ('Victoire', 'Défaite', 'Nul');\n",
+    "        CREATE TYPE resultat_enum AS ENUM ('W', 'L', 'D');\n",
     "        CREATE TABLE IF NOT EXISTS ResultatMatch(\n",
     "            id_resultat SERIAL PRIMARY KEY,\n",
     "            id_match INT REFERENCES Match(id_match),\n",
