--- a/src/FOOT-2-Transformation-et-nettoyage-des-données/Transformation_et_Nettoyage_des_Donnees.ipynb
+++ b/src/FOOT-2-Transformation-et-nettoyage-des-données/Transformation_et_Nettoyage_des_Donnees.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 422,
+   "execution_count": 97,
    "id": "96268cd3",
    "metadata": {},
    "outputs": [
@@ -755,7 +755,7 @@
        "29  3,420  38.0   0.0   0.0   0.0   0.0  0.0    0.0   3.0   0.0   0.0  "
       ]
      },
-     "execution_count": 422,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 98,
    "id": "5716805f",
    "metadata": {},
    "outputs": [],
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": 99,
    "id": "caf0f7a5",
    "metadata": {},
    "outputs": [],
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 100,
    "id": "090b9cd8",
    "metadata": {},
    "outputs": [],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 101,
    "id": "45340746",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 102,
    "id": "232c1543",
    "metadata": {},
    "outputs": [
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 103,
    "id": "eaedc8dd",
    "metadata": {},
    "outputs": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 104,
    "id": "b5009abc",
    "metadata": {},
    "outputs": [],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 105,
    "id": "9e8b9037",
    "metadata": {},
    "outputs": [
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 106,
    "id": "5e18bf24",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 107,
    "id": "6ec3a087",
    "metadata": {},
    "outputs": [],
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 108,
    "id": "61fb63c1",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 109,
    "id": "264aa6a5",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 110,
    "id": "1d7a32d2",
    "metadata": {},
    "outputs": [],
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 111,
    "id": "ada79f24",
    "metadata": {},
    "outputs": [],
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 112,
    "id": "91345d01",
    "metadata": {},
    "outputs": [],
@@ -1171,13 +1171,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 113,
    "id": "07ea791e",
    "metadata": {},
    "outputs": [],
    "source": [
     "players_df['id_joueur'] = range(1, len(players_df)+1)\n",
     "matches_df['id_matche'] = range(1, len(matches_df)+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c47cf8dd",
+   "metadata": {},
+   "source": [
+    "### Création de l’ID des équipes adverses et mappage dans le DataFrame des matchs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "faca3e6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   id_equipe       Team         Opponent  id_opponent\n",
+      "0          1  Liverpool     Ipswich Town         19.0\n",
+      "1          1  Liverpool        Brentford         10.0\n",
+      "2          1  Liverpool   Manchester Utd         15.0\n",
+      "3          1  Liverpool  Nott'ham Forest          7.0\n",
+      "4          1  Liverpool         it Milan          NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_id_map = dict(zip(matches_df[\"Team\"], matches_df[\"id_equipe\"]))\n",
+    "\n",
+    "matches_df[\"id_opponent\"] = matches_df[\"Opponent\"].map(team_id_map)\n",
+    "print(matches_df[[\"id_equipe\", \"Team\", \"Opponent\", \"id_opponent\"]].head())\n",
+    "matches_df[\"id_opponent\"] = matches_df[\"id_opponent\"].fillna(0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d246e9c9",
+   "metadata": {},
+   "source": [
+    "### Attribution des IDs des équipes à domicile et à l’extérieur selon le lieu du match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "df98474a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matches_df[\"id_teamhome\"] = matches_df.apply(\n",
+    "    lambda row: row[\"id_equipe\"] if row[\"Venue\"] == \"Home\" else row[\"id_opponent\"], axis=1\n",
+    ")\n",
+    "\n",
+    "matches_df[\"id_team_away\"] = matches_df.apply(\n",
+    "    lambda row: row[\"id_opponent\"] if row[\"Venue\"] == \"Home\" else row[\"id_equipe\"], axis=1\n",
+    ")"
    ]
   },
   {
@@ -1189,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 116,
    "id": "fd82098d",
    "metadata": {},
    "outputs": [],
