--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -24,6 +24,36 @@
     "\n",
     "engine = create_engine(\"postgresql://postgres:123@localhost:5432/Scaping_Data2\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fba7fcb",
+   "metadata": {},
+   "source": [
+    "### Insertion des compétitions uniques dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a1d08973",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "try:\n",
+    "    selected_df1 = matches_df[[\"id_competition\", \"Comp\"]].drop_duplicates().copy()\n",
+    "\n",
+    "    selected_df1.rename(columns={\n",
+    "        \"Comp\": \"nomcompetition\",\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    selected_df1.to_sql(\"competition\", engine, if_exists=\"append\", index=False)\n",
+    "\n",
+    "\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)"
+   ]
   }
  ],
  "metadata": {
