Insertion des équipes uniques dans la table Equipe

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -54,6 +54,38 @@
     "except SQLAlchemyError as e:\n",
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346151cb",
+   "metadata": {},
+   "source": [
+    "### Insertion des équipes uniques dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "22a0b2df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "try:\n",
+    "    selected_df2 = matches_df[[\"id_equipe\", \"Team\"]].drop_duplicates().copy()\n",
+    "\n",
+    "    selected_df2.rename(columns={\n",
+    "        \"Team\": \"nomequipe\",\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "\n",
+    "    selected_df2.to_sql(\"equipe\", engine, if_exists=\"append\", index=False)\n",
+    "\n",
+    "\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
