Insertion des joueurs dans la table Joueur avec renommage des colonnes

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -86,6 +86,35 @@
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdabb98e",
+   "metadata": {},
+   "source": [
+    "### Insertion des joueurs dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c333613f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    selected_df3 = players_df[[\"id_joueur\",\"Player\", \"Nation\", \"Pos\",\"id_equipe\"]].copy()\n",
+    "\n",
+    "    selected_df3.rename(columns={\n",
+    "        \"Player\": \"nomjoueur\",\n",
+    "        \"Pos\": \"position\",\n",
+    "        \"Nation\": \"nationalite\"\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    selected_df3.to_sql(\"joueur\", engine, if_exists=\"append\", index=False)\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)"
+   ]
   }
  ],
  "metadata": {
