Insertion des matchs dans la table Match avec transformation des colonnes et ajout de la saison

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -115,6 +115,42 @@
     "except SQLAlchemyError as e:\n",
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\",e)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02af29b5",
+   "metadata": {},
+   "source": [
+    "### Insertion des matchs dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0c9181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "\n",
+    "try:\n",
+    "    selected_df4 = matches_df[[\"id_matche\",\"Date\",\"Time\",\"Round\",\"Venue\",\"id_teamhome\",\"id_team_away\",\"id_competition\",]].copy()\n",
+    "\n",
+    "    selected_df4.rename(columns={\n",
+    "        \"id_matche\": \"id_match\",\n",
+    "        \"Date\": \"date_match\",\n",
+    "        \"Time\": \"heure\",\n",
+    "        \"Round\": \"round\",\n",
+    "        \"Venue\": \"venue\"\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    selected_df4[\"id_saison\"] = 1\n",
+    "\n",
+    "    selected_df4.to_sql(\"match\", engine, if_exists=\"append\", index=False)\n",
+    "\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
+   ]
   }
  ],
  "metadata": {
