Insertion des résultats des matchs dans la table ResultatMatch avec renommage des colonnes

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -151,6 +151,39 @@
     "except SQLAlchemyError as e:\n",
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0970b9cf",
+   "metadata": {},
+   "source": [
+    "### Insertion des résultats des matchs dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "146c56e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "\n",
+    "try:\n",
+    "    selected_df5 = matches_df[[\"id_matche\",\"id_equipe\",\"GF\",\"GA\",\"Result\"]].copy()\n",
+    "    \n",
+    "    selected_df5.rename(columns={\n",
+    "        \"id_matche\": \"id_match\",\n",
+    "        \"GF\": \"butsmarques\",\n",
+    "        \"GA\": \"butsconcedes\",\n",
+    "        \"Result\": \"resultat\",\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    selected_df5.to_sql(\"resultatmatch\", engine, if_exists=\"append\", index=False)\n",
+    "\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
+   ]
   }
  ],
  "metadata": {
