Insertion des statistiques des joueurs dans la table StatistiqueJoueur avec renommage des colonnes

--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -184,6 +184,41 @@
     "except SQLAlchemyError as e:\n",
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d734577",
+   "metadata": {},
+   "source": [
+    "### Insertion des statistiques des joueurs dans la base de données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "36668777",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "\n",
+    "try:\n",
+    "    selected_df6 = players_df[[\"id_joueur\", \"Gls\",\"Ast\",\"MP\",\"CrdY\",\"CrdR\"         \n",
+    "    ]].copy()\n",
+    "\n",
+    "    selected_df6.rename(columns={\n",
+    "        \"Gls\": \"buts\",\n",
+    "        \"Ast\": \"passesdecisives\",\n",
+    "        \"MP\": \"nbmatchesplayed\",\n",
+    "        \"CrdY\": \"cartonsjaunes\",\n",
+    "        \"CrdR\": \"cartonsrouges\"\n",
+    "    }, inplace=True)\n",
+    "\n",
+    "    selected_df6.to_sql(\"statistiquejoueur\", engine, if_exists=\"append\", index=False)\n",
+    "\n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
+   ]
   }
  ],
  "metadata": {
