--- a/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
+++ b/src/FOOT-3-Modélisation-et-stockage-dans-PostgreSQL/Fill-Database.ipynb
@@ -219,6 +219,33 @@
     "except SQLAlchemyError as e:\n",
     "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52eea03f",
+   "metadata": {},
+   "source": [
+    "### Insertion des participations des équipes dans la table Participation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "33bd2a91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.exc import SQLAlchemyError\n",
+    "\n",
+    "try:\n",
+    "    selected_df7 = matches_df[[\"id_equipe\", \"id_competition\"]].drop_duplicates().copy()\n",
+    "    selected_df7[\"id_saison\"] = 1 \n",
+    "    \n",
+    "    selected_df7.to_sql(\"participation\", engine, if_exists=\"append\", index=False)\n",
+    "    \n",
+    "except SQLAlchemyError as e:\n",
+    "    print(\"Erreur lors de la connexion ou de l’insertion SQL :\", e)\n"
+   ]
   }
  ],
  "metadata": {
