Top 10 des meilleurs buteurs

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -26,6 +26,140 @@
     "    return df\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86b1cc85",
+   "metadata": {},
+   "source": [
+    "### Top 10 des meilleurs buteurs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b78cb5d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_buteurs = run_query(\"\"\"\n",
+    "SELECT nomjoueur, SUM(buts) AS total_buts\n",
+    "FROM StatistiqueJoueur\n",
+    "JOIN Joueur USING(id_joueur)\n",
+    "GROUP BY nomjoueur\n",
+    "ORDER BY total_buts DESC\n",
+    "LIMIT 10;\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5bac78cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nomjoueur</th>\n",
+       "      <th>total_buts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alexander Isak</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Erling Haaland</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chris Wood</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bryan Mbeumo</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Yoane Wissa</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Ollie Watkins</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Matheus Cunha</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Cole Palmer</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Jørgen Strand Larsen</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              nomjoueur  total_buts\n",
+       "0         Mohamed Salah          29\n",
+       "1        Alexander Isak          23\n",
+       "2        Erling Haaland          22\n",
+       "3            Chris Wood          20\n",
+       "4          Bryan Mbeumo          20\n",
+       "5           Yoane Wissa          19\n",
+       "6         Ollie Watkins          16\n",
+       "7         Matheus Cunha          15\n",
+       "8           Cole Palmer          15\n",
+       "9  Jørgen Strand Larsen          14"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_buteurs.head(10)"
+   ]
   }
  ],
  "metadata": {
