Joueurs les plus décisifs (buts + passes)

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -160,6 +160,140 @@
    "source": [
     "top_buteurs.head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8523d734",
+   "metadata": {},
+   "source": [
+    "### Joueurs les plus décisifs (buts + passes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6893d250",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joueurs_decisifs = run_query(\"\"\"\n",
+    "SELECT nomjoueur, SUM(buts + passesdecisives) AS impact\n",
+    "FROM StatistiqueJoueur\n",
+    "JOIN Joueur USING(id_joueur)\n",
+    "GROUP BY nomjoueur\n",
+    "ORDER BY impact DESC\n",
+    "LIMIT 10;\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f23db306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nomjoueur</th>\n",
+       "      <th>impact</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alexander Isak</td>\n",
+       "      <td>29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bryan Mbeumo</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Erling Haaland</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ollie Watkins</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Chris Wood</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Yoane Wissa</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Cole Palmer</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Jarrod Bowen</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Matheus Cunha</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        nomjoueur  impact\n",
+       "0   Mohamed Salah      47\n",
+       "1  Alexander Isak      29\n",
+       "2    Bryan Mbeumo      27\n",
+       "3  Erling Haaland      25\n",
+       "4   Ollie Watkins      24\n",
+       "5      Chris Wood      23\n",
+       "6     Yoane Wissa      23\n",
+       "7     Cole Palmer      23\n",
+       "8    Jarrod Bowen      21\n",
+       "9   Matheus Cunha      21"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joueurs_decisifs.head(10)"
+   ]
   }
  ],
  "metadata": {
