Joueurs les plus disciplinés (cartons)

--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "id": "6893d250",
    "metadata": {},
    "outputs": [],
@@ -182,13 +182,12 @@
     "JOIN Joueur USING(id_joueur)\n",
     "GROUP BY nomjoueur\n",
     "ORDER BY impact DESC\n",
-    "LIMIT 10;\n",
     "\"\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "f23db306",
    "metadata": {},
    "outputs": [
@@ -250,12 +249,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Yoane Wissa</td>\n",
+       "      <td>Cole Palmer</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Cole Palmer</td>\n",
+       "      <td>Yoane Wissa</td>\n",
        "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -280,19 +279,161 @@
        "3  Erling Haaland      25\n",
        "4   Ollie Watkins      24\n",
        "5      Chris Wood      23\n",
-       "6     Yoane Wissa      23\n",
-       "7     Cole Palmer      23\n",
+       "6     Cole Palmer      23\n",
+       "7     Yoane Wissa      23\n",
        "8    Jarrod Bowen      21\n",
        "9   Matheus Cunha      21"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "joueurs_decisifs.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c5f687c",
+   "metadata": {},
+   "source": [
+    "### Joueurs les plus disciplinés (cartons)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f00c7f45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joueurs_disciplinés = run_query(\"\"\"\n",
+    "SELECT nomjoueur, SUM(cartonsjaunes + cartonsrouges) AS total_cartons\n",
+    "FROM StatistiqueJoueur\n",
+    "JOIN Joueur USING(id_joueur)\n",
+    "GROUP BY nomjoueur\n",
+    "ORDER BY total_cartons ASC\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "30eb8695",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nomjoueur</th>\n",
+       "      <th>total_cartons</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Vitor Reis</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rob Holding</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Maeson King</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Willian</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Henry Cartwright</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>680</th>\n",
+       "      <td>Liam Delap</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>681</th>\n",
+       "      <td>Flynn Downes</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>682</th>\n",
+       "      <td>Morgan Gibbs-White</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>683</th>\n",
+       "      <td>Saša Lukić</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>684</th>\n",
+       "      <td>João Gomes</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>685 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              nomjoueur  total_cartons\n",
+       "0            Vitor Reis              0\n",
+       "1           Rob Holding              0\n",
+       "2           Maeson King              0\n",
+       "3               Willian              0\n",
+       "4      Henry Cartwright              0\n",
+       "..                  ...            ...\n",
+       "680          Liam Delap             12\n",
+       "681        Flynn Downes             12\n",
+       "682  Morgan Gibbs-White             12\n",
+       "683          Saša Lukić             12\n",
+       "684          João Gomes             12\n",
+       "\n",
+       "[685 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joueurs_disciplinés.head(700)"
    ]
   }
  ],
