--- a/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
+++ b/src/FOOT-4-Analyse-des-données/Analyse-des-données-du-football.ipynb
@@ -435,6 +435,149 @@
    "source": [
     "joueurs_disciplinés.head(700)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f665670c",
+   "metadata": {},
+   "source": [
+    "### Répartition des nationalités par équipe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "323fb322",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nationalites_par_equipe = run_query(\"\"\"\n",
+    "SELECT id_equipe, nationalite, COUNT(*) AS nb_joueurs\n",
+    "FROM Joueur\n",
+    "GROUP BY id_equipe, nationalite\n",
+    "ORDER BY id_equipe, nb_joueurs DESC;\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9b2d433f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_equipe</th>\n",
+       "      <th>nationalite</th>\n",
+       "      <th>nb_joueurs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ENG</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NED</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ARG</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SCO</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>COL</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>URU</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ITA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "      <td>NIR</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1</td>\n",
+       "      <td>HUN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id_equipe nationalite  nb_joueurs\n",
+       "0          1         ENG          11\n",
+       "1          1         NED           3\n",
+       "2          1         ARG           1\n",
+       "3          1         SCO           1\n",
+       "4          1         COL           1\n",
+       "5          1         URU           1\n",
+       "6          1         ITA           1\n",
+       "7          1         FRA           1\n",
+       "8          1         NIR           1\n",
+       "9          1         HUN           1"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nationalites_par_equipe.head(10)"
+   ]
   }
  ],
  "metadata": {
